[package]
name = "unsafe-libyaml"
version = "0.1.3" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
description = "libyaml transpiled to rust by c2rust"
repository = "https://github.com/dtolnay/unsafe-libyaml"
documentation = "https://docs.rs/unsafe-libyaml"
readme = "README.md"
keywords = ["yaml"]
categories = ["encoding"]

[workspace]
[dev-dependencies]
pretty_assertions = "1.0"
unsafe-libyaml-test-suite = { path = "tests/data" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
