[package]
name = "unsafe-libyaml-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
unsafe-libyaml = { path = ".." }

[[bin]]
name = "scan"
path = "fuzz_targets/scan.rs"
test = false
doc = false

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false

[[bin]]
name = "load"
path = "fuzz_targets/load.rs"
test = false
doc = false

[workspace]
